--- a/lab3/kaze_with_rnn.ipynb
+++ b/lab3/kaze_with_rnn.ipynb
@@ -1797,20 +1797,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 55,
+   "execution_count": 86,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Time: 0.09939360618591309\n",
-      "Average: 0.0005846682716818417\n"
+      "(170, 1, 8)\n",
+      "Time: 18.30785608291626\n",
+      "Average: 0.107693271075978\n"
      ]
     }
    ],
    "source": [
     "start = time.time()\n",
+    "\n",
+    "test_scr_pin = compute_data(X_test_scr_pin)\n",
+    "X_test_scr_pin_arr = test_scr_pin[:,np.newaxis, :]\n",
+    "print(X_test_scr_pin_arr.shape)\n",
     "model_scr_pin.predict(X_test_scr_pin_arr)\n",
     "end = time.time()\n",
     "print(f'Time: {end-start}')\n",
@@ -1826,20 +1831,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 68,
+   "execution_count": 87,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Time: 0.08760356903076172\n",
-      "Average: 0.0005153151119456572\n"
+      "(165, 1, 8)\n",
+      "Time: 18.301521062850952\n",
+      "Average: 0.10765600625206442\n"
      ]
     }
    ],
    "source": [
     "start = time.time()\n",
+    "\n",
+    "test_scr_ban = compute_data(X_test_scr_ban)\n",
+    "X_test_scr_ban_arr = test_scr_ban[:,np.newaxis, :]\n",
+    "print(X_test_scr_ban_arr.shape)\n",
     "model_scr_ban.predict(X_test_scr_ban_arr)\n",
     "end = time.time()\n",
     "print(f'Time: {end-start}')\n",
@@ -1855,20 +1865,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 69,
+   "execution_count": 88,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Time: 0.0926518440246582\n",
-      "Average: 0.0005450108472038718\n"
+      "(165, 1, 8)\n",
+      "Time: 22.763827562332153\n",
+      "Average: 0.13390486801371854\n"
      ]
     }
    ],
    "source": [
     "start = time.time()\n",
+    "test_pin_ban = compute_data(X_test_pin_ban)\n",
+    "X_test_pin_ban_arr = test_pin_ban[:,np.newaxis, :]\n",
+    "print(X_test_scr_ban_arr.shape)\n",
     "model_pin_ban.predict(X_test_pin_ban_arr)\n",
     "end = time.time()\n",
     "print(f'Time: {end-start}')\n",
@@ -1884,20 +1898,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 59,
+   "execution_count": 89,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Time: 0.008931398391723633\n",
-      "Average: 5.253763759837431e-05\n"
+      "(170, 8)\n",
+      "Time: 22.302806854248047\n",
+      "Average: 0.13119298149557673\n"
      ]
     }
    ],
    "source": [
     "start = time.time()\n",
+    "test_scr_pin = compute_data(X_test_scr_pin)\n",
+    "print(np.array(test_scr_pin).shape)\n",
     "svc_scr_pin.predict(test_scr_pin)\n",
     "end = time.time()\n",
     "print(f'Time: {end-start}')\n",
@@ -1913,20 +1930,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 64,
+   "execution_count": 90,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Time: 0.005861043930053711\n",
-      "Average: 3.4476729000315944e-05\n"
+      "(165, 8)\n",
+      "Time: 21.804858684539795\n",
+      "Average: 0.12826387461493996\n"
      ]
     }
    ],
    "source": [
     "start = time.time()\n",
+    "test_scr_ban = compute_data(X_test_scr_ban)\n",
+    "print(np.array(test_scr_ban).shape)\n",
     "svc_scr_ban.predict(test_scr_ban)\n",
     "end = time.time()\n",
     "print(f'Time: {end-start}')\n",
@@ -1942,20 +1962,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 65,
+   "execution_count": 91,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Time: 0.007195711135864258\n",
-      "Average: 4.23277125639074e-05\n"
+      "(170, 8)\n",
+      "Time: 23.680336952209473\n",
+      "Average: 0.13929609971887924\n"
      ]
     }
    ],
    "source": [
     "start = time.time()\n",
+    "test_pin_ban = compute_data(X_test_pin_ban)\n",
+    "print(np.array(test_pin_ban).shape)\n",
     "svc_pin_ban.predict(test_pin_ban)\n",
     "end = time.time()\n",
     "print(f'Time: {end-start}')\n",
@@ -1971,20 +1994,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 63,
+   "execution_count": 92,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Time: 0.0019779205322265625\n",
-      "Average: 1.163482666015625e-05\n"
+      "(170, 8)\n",
+      "Time: 20.7297260761261\n",
+      "Average: 0.12193956515368293\n"
      ]
     }
    ],
    "source": [
     "start = time.time()\n",
+    "test_scr_pin = compute_data(X_test_scr_pin)\n",
+    "print(np.array(test_scr_pin).shape)\n",
     "tree_scr_pin.predict(test_scr_pin)\n",
     "end = time.time()\n",
     "print(f'Time: {end-start}')\n",
@@ -2000,20 +2026,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 66,
+   "execution_count": 93,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Time: 0.0020554065704345703\n",
-      "Average: 1.2090626884909237e-05\n"
+      "(165, 8)\n",
+      "Time: 21.570936918258667\n",
+      "Average: 0.126887864225051\n"
      ]
     }
    ],
    "source": [
     "start = time.time()\n",
+    "test_scr_ban = compute_data(X_test_scr_ban)\n",
+    "print(np.array(test_scr_ban).shape)\n",
     "tree_scr_ban.predict(test_scr_ban)\n",
     "end = time.time()\n",
     "print(f'Time: {end-start}')\n",
@@ -2029,20 +2058,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 67,
+   "execution_count": 94,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Time: 0.002044677734375\n",
-      "Average: 1.2027516084558823e-05\n"
+      "(170, 8)\n",
+      "Time: 23.309866428375244\n",
+      "Average: 0.1371168613433838\n"
      ]
     }
    ],
    "source": [
     "start = time.time()\n",
+    "test_pin_ban = compute_data(X_test_pin_ban)\n",
+    "print(np.array(test_pin_ban).shape)\n",
     "tree_pin_ban.predict(test_pin_ban)\n",
     "end = time.time()\n",
     "print(f'Time: {end-start}')\n",
